docs/en/ai_applications/kagenti/assets/envoy_ai_gateway_mcp/02-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: kagenti-mcp
  namespace: kagenti-mcp-demo
spec:
  gatewayClassName: envoy-gateway-system-aieg
  infrastructure:
    parametersRef:
      group: gateway.envoyproxy.io
      kind: EnvoyProxy
      name: kagenti-mcp-proxy
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: Same
